--- a/Appendices/SokobanPDDL.tex
+++ b/Appendices/SokobanPDDL.tex
@@ -95,4 +95,70 @@ atGoal(crate)
 
 In total, six different action schemas are required for the sokoban domain, and more would be required if the domain was to be made reversible. <\texttt{TODO:} conclude something interesting?>
 
+\section{Conditional Sokoban action schemas}
+
+We will now present a formalization of the Sokoban domain using conditional effects. We will adhere to the restrictions given in Chapter~\ref{chp:ca}, the most important of which are ``No action parameters'' and ``No disjuntive preconditions''. As we do 
+
+\begin{align*}
+\actact & \textit{move-west(): } &  \\
+& \forall x, y
+    \left[
+        \begin{gathered}
+            sokobanAt(x) \land 
+            \\ \neg sokobanAt(y) 
+        \end{gathered}
+    \right]
+    \quad when \quad
+    \left[ 
+        \begin{gathered}
+            sokobanAt(y) \land hAdj(x,y) \\ 
+            \land \neg boxAt(x)
+        \end{gathered}
+    \right]
+\end{align*}
+
+\begin{align*}
+    \actact & \textit{push-west(): } & \\
+    & \forall x, y, z
+    \left[ 
+        \begin{gathered}
+            \neg goalSolved(y) \\
+            \land at(x) \land \neg at (y) \\
+            \land sokobanAt(y) \\
+            \land \neg sokobanAt(z) 
+        \end{gathered}
+    \right]
+    \quad when \quad
+    \left[
+        \begin{gathered}
+            at(y) \land \neg at(x) \\
+            \land sokobanAt(z) \\ 
+            \land hAdj (y,z) \land hAdj (x,y) \\
+            \land \neg at(x)
+        \end{gathered}
+    \right] \\
+    & \land \\
+    & \forall x, y, z
+    \left[
+        goalSolved(x)
+    \right]
+    \quad when \quad
+    \left[
+        \begin{gathered}
+            goal(x) \\
+            \land at(y) \land \neg at(x) \\ 
+            \land sokobanAt(z) \\ 
+            \land hAdj (y,z) \land hAdj (x,y) \\
+        \end{gathered}
+    \right]
+\end{align*}
+% \begin{split}
+%         \actact & move-west():
+%         \forall x, y &\left[
+%             \begin{split}
+%                 hej & \\
+%                 hej &
+%             \end{split}
+%             \right] \\
+%         \end{split}
 \end{document}
