--- a/Appendices/Hypergraph.tex
+++ b/Appendices/Hypergraph.tex
@@ -11,7 +11,7 @@
 \section{Collapsing hypergraphs}
 	\subfile{\master/Appendices/Hypergraph/CollapsingHypergraphs}
 
-\section{Hypothesis construction}
-	\subfile{\master/Appendices/Hypergraph/ConditionalHypothesisConstruction}
+%\section{Hypothesis construction}\labal{sec:hyper:hyp-con}
+%	\subfile{\master/Appendices/Hypergraph/ConditionalHypothesisConstruction}
 
 \end{document}
