--- a/Conclusion.tex
+++ b/Conclusion.tex
@@ -53,7 +53,10 @@
 
 	\section{Future Work}
 	
-	
+	\begin{enumerate}
+		\item Analyze expressive power of our conditional action with our restrictions.
+		\item We have found candidates might automatically solve the problem of disjunctive precondition. However further research is required, as it changes our model for proving preconditions.
+	\end{enumerate}
 	
 
 \end{document}
