--- a/Conditional/HypothesisConstruction.tex
+++ b/Conditional/HypothesisConstruction.tex
@@ -1,5 +1,90 @@
 \providecommand{\master}{..}
 \documentclass[\master/Master.tex]{subfiles}
 \begin{document}
+  	Unsurprisingly the basics of hypothesis construction for conditional actions is very similar to that of non-conditional actions. 
+  	As such refer to \Cref{sec:NC:hypcon} for detailed explanation of how the traits interacts with knowledge (proven, disproved, unproven.. etc.), to understand how we define trait see \Cref{sec:Strategy}.
+  	While the basic theory of traits remain the same, constructing hypothetical action schema using the knowledge we have modeled, is completely different. First off the knowledge that we work with is no longer sets of predicates, but instead we have it in the form of connecting paths.
+  	Therefore new approaches are needed if we want to design action schemas based on a specific strategy.
+  	This section will go through how 
+  	 	
+  	\subsection{Optimistic Strategy}
+  	The optimistic strategy as we recall from \Cref{sec:Strategy}, has the traits \texttt{Explorative} and \texttt{Self-sufficient}.
+  	To accomplish these traits we must do exactly as we did in hypothesis construction for non-conditional actions, 
+  	which is to plan using candidate preconditions; except with a twist: 
+  	We have to use the connecting paths that reach the candidates.
+  	What we mean by reach, is that a candidate is not only defined by a single literal --- like for non-conditional actions --- but rather a path of literal nodes connected by variables (as explained in \Cref{ssec:ca:connecting-paths}). 
+  	Like for non-conditional knowledge we what we have are set of sets of paths. With the guarantee that for each set at least one path is a contains only actual preconditions. Therefore it follows that we can place the paths in a CNF, where the paths are the replace the literals.
+  	
+  	Since we have a candidate set for each individual effect, we must do it for each possible effect \preds.
+  	
+  	As such to build the hypothesis for the effects $q_1,q_2,\dots,q_n$:  	
+  	\begin{equation} \label{eq:ca:opt-preconds}
+  	\begin{split}  	
+  	\forall ~& q_1 ~ when ~ \bigwedge\limits_{\pro \in \Pro_{q_1}} k ~ \land ~ 
+  	\bigwedge \limits_{\Cand \in \cset_{q_1} } \left( \bigvee \limits_{path \in \Cand} \left( \bigwedge \limits_{p \in path} p\right)\right)
+  	\\
+  	& \land \\
+  	\\
+  	\forall ~& q_2 ~ when ~  \dots \\
+  	&\dots \\
+  	\forall ~& q_n ~ when ~  \dots
+  	\end{split}  	
+  	\end{equation}
+  	
+  	We see that this is similar to non-conditional optimistic hypothesis construction presented in \Cref{sec:NC:hypcon}, except that literals are now paths of literals.
+  	
+  	\begin{example}\label{ex:ca:opt-hyp-cons} To get an idea of using all candidate paths between the effect and the precondition, 
+  		we will show how candidate sets can be turned into an optimistic action schema hypothesis.
+  		
+  		Imagine we are constructing a conditional for a single conditional.
+  		\begin{align*}
+  				candidate~ A &: q_1 \bc g_1  \\
+  				candidate~ B &: q_1 \bc p_2 \pc p_1  	\\			
+  				candidate~ C &: q_1 \bc h_1 \\
+  				candidate~ D &: q_1 \bc b_2 \pc b_1 \bc  f_1\\
+  				Set of candidate sets &: \left\{ \{ A, B \}, \{ C, D \}  \right\}
+  		\end{align*}
+  		
+  		To turn these paths into preconditions we simply map each binding to a variable. 
+  		For instance, binding $q_1 \bc g_1 \mapsto x$ and binding $q_1 \bc g_1 \mapsto y$.   		
+  		As with non-conditional effects, we use the candidates set of sets in a CNF, but instead of single literals we use entire paths.
+  		That means we use $\land$ between each predicate in the path, $\lor$ between each path and $\land$ between each candidate set; however in this example we only have a single set.	
+  		Lastly as a minor optimization we can avoid using new variables for each separate candidate as they are in a disjunction.
+  		However between the sets we must use new variables as they are in a conjunction.
+  		For instance, the candidates $A$ and $B$ can share variables but the set $\{A, B\}$ cannot share variables with  the set $\{C, D\}$
+  		
+  			\begin{align*}	
+  				Effect: \forall ~q(x)~ & when ~ \\
+   				&\left( g(x) \lor p(x,y) \right) \\
+  				&\land \\
+  				&\left( h(x) \lor \left( b(z,x) \land f(z)  \right) \right)
+  			\end{align*}
+  		
+  		We see that the idea from non-condition action hypothesis construction can be used.
+  		
+  	\end{example}
+  
+  	
+  	
+  	\subsection{Pessimistic Strategy}
+  	
+  we recall from \Cref{sec:NC:hypcon} that to make a pessimistic action schema it is only necessary to plan using only unproven preconditions. Since as we have shown we can have a set of unproven connecting paths then we need only convert it into conjunctions of literals, like in the optimistic strategy. Furthermore where the optimistic planner used all possible effects, the pessimistic strategy should only use effects that the agent had observed occurring.
+  
+  As such to build the pessimistic hypothesis for the effects $q_1,q_2,\dots,q_n$:  	
+  
+  \begin{equation} \label{eq:ca:pes-preconds}
+  \begin{split}  	
+  \forall ~& q_1 ~ when ~ \bigwedge\limits_{\pro \in \Pro_{q_1}} k ~ \land ~
+  \left( \bigwedge \limits_{path \in \Up_{q_1}} \left( \bigwedge \limits_{p \in path} p\right)\right)
+  \\
+  & \land \\
+  \\
+  \forall ~& q_2 ~ when ~  \dots \\
+  &\dots \\
+  \forall ~& q_n ~ when ~  \dots
+  \end{split}  	
+  \end{equation}
+  Like for the optimistic this strategy is consistent with \Cref{sec:NC:hypcon}
+  	
     
 \end{document}
