--- a/Appendices/SokobanPDDL.tex
+++ b/Appendices/SokobanPDDL.tex
@@ -93,11 +93,15 @@ atGoal(crate)
 \end{split}
 \end{align}
 
-In total, six different action schemas are required for the sokoban domain, and more would be required if the domain was to be made reversible. <\texttt{TODO:} conclude something interesting?>
+In total, six different action schemas are required for the sokoban domain, and more would be required if the domain was to be made reversible.
 
 \section{Conditional Sokoban action schemas}
 
-We will now present a formalization of the Sokoban domain using conditional effects. We will adhere to the restrictions given in Chapter~\ref{chp:ca}, the most important of which are ``No action parameters'' and ``No disjuntive preconditions''. As we do 
+We will now present a formalization of the Sokoban domain using conditional effects. We will adhere to the restrictions given in Chapter~\ref{chp:ca}, the most important of which are ``No action parameters'' and ``No disjuntive preconditions''. Additionally, the action schemas contain no preconditions, and their effects consists solely of conjunctions of conditionals.
+
+Initially, observe that the domain and problem specifications can not readily be reused under these restrictions. For example, the adjacency relations carry no information about direction, i.e.\ whether one tile is to the left or right of another, but only that they are adjacent. This poses a problem when effects can only be described in terms of universally quantified predicates, as this could for example make the sokoban move to two horizontally adjacent, unoccupied tiles at once.
+
+Instead, we
 
 \begin{align*}
 \actact & \textit{move-west(): } &  \\
