Added abstract, preface, summary

--- a/Acknowledgements.tex
+++ b/Acknowledgements.tex
@@ -1,4 +1,4 @@
 \chapter{Acknowledgements}
 
-I would like to thank my....
+We would like to thank Thomas Bolander as our supervisor for this project, and we would like to thank our friends and family members that have assisted us in proof reading.
 
