--- a/Master.tex
+++ b/Master.tex
@@ -197,7 +197,19 @@
 %Frontmatter material
 %--------------------
 \frontmatter
-\pagenumbering{roman}                               %Set frontmatter numbering style
+\pagenumbering{roman}     
+\chapter{Abstract}
+ 
+ Action schema learning is important as it is the first step for the construction of an A.I. based on only logical reasoning. 
+
+This thesis deals with action schema learning through deductive reasoning methods.
+The purpose of this thesis is show how we may approach Artificial Intelligence learning from non-probabilistic point of view. 
+We accomplish this using established mathematical models, such as graphs and sets. 
+What the thesis provides is algorithms, mathematical formulas/models for learning STRIPS-style action schema, and gives an insight on how to apply those ideas in conditional-effect action schema learning.
+
+
+
+                          %Set frontmatter numbering style
 \input{SummaryUK}                                   %English summary of Thesis
 \markboth{}{}                                       %Set headings (left)(right)
 \input{SummaryDK}                                   %Danish summary of Thesis
