--- a/SummaryDK.tex
+++ b/SummaryDK.tex
@@ -1,6 +1,15 @@
 \chapter{Summary (Danish)}
 \begin{otherlanguage}{danish}
 
-Målet for denne afhandling er at ...
+Denne afhandling forsøger at løse problemerne med action schema læring.
+Det er at lære actions i et domæne uden kendskab til disse actions ' effekter og forudsætning , og kun ved at analysere  state- transitions. Løsningen som vi frembringer burde ikke være baseret på sandsynlighed eller evolutionære teorier , men snarere at man udleder actions , baseret kun på at analysere state-transitions.
+Denne afhandling udvider arbejdet i \cite{Walsh2008} ,
+ved at udforske de underliggende egenskaber af deres arbejde .
+På grund af dette er vi i stand til at fjerne nogle begrænsninger i deres model .
+
+Målet med denne afhandling er at belyse , hvad det betyder at lære. Specielt vil vi fokusere på non-conditional actions, og forsøger at skabe en ramme for at løse problemet med conditional action schema læring.
+
+Vi løser disse problemer ved hjælp af graf-teori , mængde-teori og logisk ræsonnement .
+
 
 \end{otherlanguage}
