--- a/SummaryUK.tex
+++ b/SummaryUK.tex
@@ -1,3 +1,13 @@
 \chapter{Summary (English)}
 
-The goal of the thesis is to ...
+
+This thesis attempts to solve the problems of action schema learning.
+That is learning actions in a domain without knowledge of those actions' effects and precondition, and only by analyzing the state-transitions. The solution to these problems should not use any probability or evolutionary theories, but rather infer the actions, based only on analyzing the state-transitions. 
+This thesis extends the work of \cite{Walsh2008},
+by exploring the underlying properties of their work.
+Because of this we are able to remove some of the restrictions in their model.
+
+The goal of this thesis is to elucidate what it means to learn. Specially we will focus on non-conditional actions, and attempt to provide a framework to solve the problem of conditional action schema learning.
+
+We solve these problems using graph theory, set theory and logic reasoning.
+
