--- a/Discussion.tex
+++ b/Discussion.tex
@@ -5,7 +5,7 @@
 As discussed in <ref>, we have imposed several restrictions on the conditional action schemas that we can learn, the most important of which we will discuss here.
 
 \paragraph*{No action parameters}
-In order to narrow our study on conditional effects, we elected to disallow parametric actions. Thus, the actions we support 
+In order to narrow our study on conditional effects, we elected to disallow parametric actions. Thus, the actions we support rely extensively 
 
 
 \paragraph{No disjoint preconditions}
