--- a/Appendices/SokobanPDDL.tex
+++ b/Appendices/SokobanPDDL.tex
@@ -95,7 +95,7 @@ atGoal(crate)
 
 In total, six different action schemas are required for the sokoban domain, and more would be required if the domain was to be made reversible.
 
-\section{Conditional Sokoban action schemas}
+\section{Conditional Sokoban action schemas}\label{sec:sokocond}
 
 We will now present a formalization of the Sokoban domain using conditional effects. We will adhere to the restrictions given in Chapter~\ref{chp:ca}, the most important of which are ``No action parameters'' and ``No disjuntive preconditions''. Additionally, the action schemas contain no preconditions, and their effects consists solely of conjunctions of conditionals.
 
